--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
   <header>
     <div class="nav-row">
       <div class="brand">
-        <img src="footer-logo.png" alt="Логотип Федерации" id="site-logo" style="width:220px;height:auto;object-fit:cover;border-radius:6px;box-shadow:0 6px 18px rgba(3,20,45,0.12);">
+  <img src="/footer-logo.png" alt="Логотип Федерации" id="site-logo" style="width:220px;height:auto;object-fit:cover;border-radius:6px;box-shadow:0 6px 18px rgba(3,20,45,0.12);">
         <nav class="main-nav" style="margin-left:0;">
           <a href="index.html">Главная</a>
           <a href="about.html">О нас</a>
@@ -380,7 +380,7 @@
       </div>
           <div class="more-dropdown" id="moreDropdown" style="margin-right:10px;">
             <button class="more-btn" id="moreBtn" aria-label="Меню дополнительных ссылок" style="padding:8px 10px;">
-            <img src="tochka.PNG" class="more-icon" alt="menu">
+            <img src="/tochka.PNG" class="more-icon" alt="menu">
             </button>
             <div class="more-menu" id="moreMenu" style="display:none">
               <a href="media.html">Медиа</a>
@@ -393,19 +393,19 @@
 
 <div class="socials">
   <a class="social-btn" href="https://instagram.com/yourprofile" target="_blank" rel="noopener">
-    <img src="instagramlogo.PNG" alt="Instagram">
+    <img src="/instagramlogo.PNG" alt="Instagram">
   </a>
   <a class="social-btn" href="https://t.me/yourchannel" target="_blank" rel="noopener">
-    <img src="telegramlogo.PNG" alt="Telegram">
+    <img src="/telegramlogo.PNG" alt="Telegram">
   </a>
   <a class="social-btn" href="https://facebook.com/yourpage" target="_blank" rel="noopener">
-    <img src="facebooklogo.PNG" alt="Facebook">
+    <img src="/facebooklogo.PNG" alt="Facebook">
   </a>
   <a class="social-btn" href="https://tiktok.com/@yourprofile" target="_blank" rel="noopener">
-    <img src="tiktoklogo.PNG" alt="TikTok">
+    <img src="/tiktoklogo.PNG" alt="TikTok">
   </a>
   <a class="social-btn" href="https://youtube.com/yourchannel" target="_blank" rel="noopener">
-    <img src="youtubelogo.PNG" alt="YouTube">
+    <img src="/youtubelogo.PNG" alt="YouTube">
   </a>
 </div>
 
@@ -426,7 +426,7 @@
   <section class="federation-hero">
   <div class="federation-container">
     <div class="federation-logo left">
-      <img src="logo.png" alt="Логотип Федерации" />
+  <img src="/logo.png" alt="Логотип Федерации" />
     </div>
 
     <div class="federation-text">
@@ -438,7 +438,7 @@
     </div>
 
     <div class="federation-logo right">
-      <img src="sponsor.png" alt="Логотип Спонсора" />
+  <img src="/sponsor.png" alt="Логотип Спонсора" />
     </div>
   </div>
 </section>
@@ -519,7 +519,7 @@
         flex-direction:column;
         text-align:left;
       ">
-        <img src="astanaopencup1.JPG" alt="Astana Open Cup 2025" style="
+  <img src="/astanaopencup1.JPG" alt="Astana Open Cup 2025" style="
           width:100%;
           height:210px;
           object-fit:cover;
@@ -565,7 +565,7 @@
         flex-direction:column;
         text-align:left;
       ">
-  <img src="game1.jpg" alt="CrossFit Challenge 2025" style="
+  <img src="/game1.jpg" alt="CrossFit Challenge 2025" style="
           width:100%;
           height:210px;
           object-fit:cover;
@@ -611,7 +611,7 @@
         flex-direction:column;
         text-align:left;
       ">
-  <img src="imageskz/kz.JPG" alt="Зимний Кубок 2025" style="
+  <img src="/imageskz/kz.JPG" alt="Зимний Кубок 2025" style="
           width:100%;
           height:210px;
           object-fit:cover;
@@ -657,7 +657,7 @@
         flex-direction:column;
         text-align:left;
       ">
-  <img src="imageschampionat/asia1.jpg" alt="Summer Games 2025" style="
+  <img src="/imageschampionat/asia1.jpg" alt="Summer Games 2025" style="
           width:100%;
           height:210px;
           object-fit:cover;
