--- a/media.html
+++ b/media.html
@@ -144,7 +144,7 @@
   <header>
     <div class="nav-row">
       <div class="brand">
-        <img src="footer-logo.png" alt="Логотип Федерации" style="width:220px;height:auto;border-radius:6px;box-shadow:0 6px 18px rgba(3,20,45,0.12);">
+  <img src="/footer-logo.png" alt="Логотип Федерации" style="width:220px;height:auto;border-radius:6px;box-shadow:0 6px 18px rgba(3,20,45,0.12);">
         <nav class="main-nav">
           <a href="index.html">Главная</a>
           <a href="about.html">О нас</a>
@@ -157,7 +157,7 @@
       </div>
 
           <div class="more-dropdown" id="moreDropdown">
-            <button class="more-btn" id="moreBtn" style="font-size:28px;padding:8px 10px;"><img src="tochka.PNG" class="more-icon" alt="menu"></button>
+            <button class="more-btn" id="moreBtn" style="font-size:28px;padding:8px 10px;"><img src="/tochka.PNG" class="more-icon" alt="menu"></button>
             <div class="more-menu" id="moreMenu" style="display:none">
               <a href="media.html">Медиа</a>
               <a href="competitions.html">Соревнования</a>
@@ -168,9 +168,9 @@
           </div>
       <div class="socials">
         <a class="social-btn" href="https://instagram.com/yourprofile" target="_blank" rel="noopener">
-    <img src="instagramlogo.PNG" alt="Instagram">
+  <img src="/instagramlogo.PNG" alt="Instagram">
   </a>
-        <a class="social-btn" href="https://t.me/yourchannel" target="_blank"><img src="telegramlogo.PNG" alt="Telegram"></a>
+  <a class="social-btn" href="https://t.me/yourchannel" target="_blank"><img src="/telegramlogo.PNG" alt="Telegram"></a>
         <a class="social-btn" href="https://facebook.com/yourpage" target="_blank"><img src="facebooklogo.PNG" alt="Facebook"></a>
         <a class="social-btn" href="https://tiktok.com/@yourprofile" target="_blank"><img src="tiktoklogo.PNG" alt="TikTok"></a>
         <a class="social-btn" href="https://youtube.com/yourchannel" target="_blank"><img src="youtubelogo.PNG" alt="YouTube"></a>
@@ -220,7 +220,7 @@
               <div class="gallery-wrap">
                 <div class="slider" id="slider">
                   <button class="slider-btn prev" id="prevBtn" aria-label="Предыдущее">&#10094;</button>
-                  <img id="sliderImage" src="astanaopencup1.JPG" alt="Медиа" />
+                  <img id="sliderImage" src="/astanaopencup1.JPG" alt="Медиа" />
                   <button class="slider-btn next" id="nextBtn" aria-label="Следующее">&#10095;</button>
                 </div>
 
@@ -259,11 +259,11 @@
             <script>
               // список всех изображений в проекте, кроме логотипов/иконок соцсетей
               const IMAGES = [
-                'astanaopencup1.JPG','astana2.JPG','astana1.JPG',
-                'game1.jpg','game2.JPG','game3.JPG',
+                '/astanaopencup1.JPG','/astana2.JPG','/astana1.JPG',
+                '/game1.jpg','/game2.JPG','/game3.JPG',
                 /* pologenie.jpg removed */
-                'imageskz/kz.JPG','imageskz/kz1.JPG','imageskz/kz2.JPG','imageskz/kz3.JPG','imageskz/kz4.JPG','imageskz/kz5.JPG','imageskz/kz6.JPG',
-                'imageschampionat/asia1.jpg','imageschampionat/asia2.jpg','imageschampionat/asia3.jpg','imageschampionat/asia4.jpg','imageschampionat/asia5.jpg'
+                '/imageskz/kz.JPG','/imageskz/kz1.JPG','/imageskz/kz2.JPG','/imageskz/kz3.JPG','/imageskz/kz4.JPG','/imageskz/kz5.JPG','/imageskz/kz6.JPG',
+                '/imageschampionat/asia1.jpg','/imageschampionat/asia2.jpg','/imageschampionat/asia3.jpg','/imageschampionat/asia4.jpg','/imageschampionat/asia5.jpg'
               ];
 
               (function(){
