--- a/docs4.html
+++ b/docs4.html
@@ -124,7 +124,7 @@
   <header>
     <div class="nav-row">
       <div class="brand">
-        <img src="footer-logo.png" alt="Логотип Федерации" style="width:220px;height:auto;border-radius:6px;box-shadow:0 6px 18px rgba(3,20,45,0.12);">
+  <img src="/footer-logo.png" alt="Логотип Федерации" style="width:220px;height:auto;border-radius:6px;box-shadow:0 6px 18px rgba(3,20,45,0.12);">
         <nav class="main-nav">
           <a href="index.html">Главная</a>
           <a href="about.html">О нас</a>
@@ -137,7 +137,7 @@
       </div>
 
           <div class="more-dropdown" id="moreDropdown">
-            <button class="more-btn" id="moreBtn" style="font-size:28px;padding:8px 10px;"><img src="tochka.PNG" class="more-icon" alt="menu"></button>
+            <button class="more-btn" id="moreBtn" style="font-size:28px;padding:8px 10px;"><img src="/tochka.PNG" class="more-icon" alt="menu"></button>
             <div class="more-menu" id="moreMenu" style="display:none">
               <a href="media.html">Медиа</a>
               <a href="competitions.html">Соревнования</a>
@@ -148,7 +148,7 @@
           </div>
       <div class="socials">
         <a class="social-btn" href="https://instagram.com/yourprofile" target="_blank" rel="noopener">
-    <img src="instagramlogo.PNG" alt="Instagram">
+  <img src="/instagramlogo.PNG" alt="Instagram">
   </a>
         <a class="social-btn" href="https://t.me/yourchannel" target="_blank"><img src="telegramlogo.PNG" alt="Telegram"></a>
         <a class="social-btn" href="https://facebook.com/yourpage" target="_blank"><img src="facebooklogo.PNG" alt="Facebook"></a>
@@ -160,7 +160,7 @@
 
   <section class="federation-hero">
     <div class="federation-container">
-      <div class="federation-logo left"><img src="logo.png" alt=""></div>
+  <div class="federation-logo left"><img src="/logo.png" alt=""></div>
       <div class="federation-text">
         <h2 style="color:#333;font-size:18px;margin:3px 0;font-weight:700;text-transform:uppercase;">
         ҚАЗАҚСТАНДЫҚ ФУНКЦИОНАЛДЫҚ КӨПСАЙЫС ФЕДЕРАЦИЯСЫ
@@ -168,7 +168,7 @@
         <h1>КАЗАХСТАНСКАЯ ФЕДЕРАЦИЯ ФУНКЦИОНАЛЬНОГО МНОГОБОРЬЯ</h1>
         <h2>FUNCTIONAL FITNESS FEDERATION KAZAKHSTAN</h2>
       </div>
-      <div class="federation-logo right"><img src="sponsor.png" alt=""></div>
+  <div class="federation-logo right"><img src="/sponsor.png" alt=""></div>
     </div>
   </section>
 
