--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@
               <div class="event-date" style="font-size:14px;color:#0b63b7;font-weight:700;">03.07.2025</div>
               <div class="event-title" style="font-size:18px;font-weight:800;color:#0b2340;">Положение чемпионата Казахстана</div>
             </div>
-            <div class="event-photo" style="margin-top:12px;border-radius:10px;overflow:hidden;height:180px;background:#f4f7fb;display:flex;align-items:center;justify-content:center"><img src="pologenie.jpg" alt="" style="width:100%;height:100%;object-fit:cover"></div>
+            <div class="event-photo" style="margin-top:12px;border-radius:10px;overflow:hidden;height:180px;background:#f4f7fb;display:flex;align-items:center;justify-content:center"><img src="/pologenie.jpg" alt="" style="width:100%;height:100%;object-fit:cover"></div>
             <a href="docs1.html" class="btn-primary" style="margin-top:8px;">Подробнее</a>
           </div>
         </div>
@@ -739,7 +739,7 @@
               <div class="event-date" style="font-size:14px;color:#0b63b7;font-weight:700;">08.10.2023</div>
               <div class="event-title" style="font-size:18px;font-weight:800;color:#0b2340;">Аккредитация IF3 в Казахстане</div>
             </div>
-            <div class="event-photo" style="margin-top:12px;border-radius:10px;overflow:hidden;height:180px;background:#f4f7fb;display:flex;align-items:center;justify-content:center"><img src="acred.PNG" alt="" style="width:100%;height:100%;object-fit:cover"></div>
+            <div class="event-photo" style="margin-top:12px;border-radius:10px;overflow:hidden;height:180px;background:#f4f7fb;display:flex;align-items:center;justify-content:center"><img src="/acred.PNG" alt="" style="width:100%;height:100%;object-fit:cover"></div>
             <a href="docs2.html" class="btn-primary" style="margin-top:8px;">Подробнее</a>
           </div>
         </div>
@@ -751,7 +751,7 @@
               <div class="event-date" style="font-size:14px;color:#0b63b7;font-weight:700;">01.01.2025</div>
               <div class="event-title" style="font-size:18px;font-weight:800;color:#0b2340;">Календарь</div>
             </div>
-            <div class="event-photo" style="margin-top:12px;border-radius:10px;overflow:hidden;height:180px;background:#f4f7fb;display:flex;align-items:center;justify-content:center"><img src="kalen.jpg" alt="" style="width:100%;height:100%;object-fit:cover"></div>
+            <div class="event-photo" style="margin-top:12px;border-radius:10px;overflow:hidden;height:180px;background:#f4f7fb;display:flex;align-items:center;justify-content:center"><img src="/kalen.jpg" alt="" style="width:100%;height:100%;object-fit:cover"></div>
             <a href="docs1.html" class="btn-primary" style="margin-top:8px;">Подробнее</a>
           </div>
         </div>
@@ -761,7 +761,7 @@
           <div style="padding:18px 20px;display:flex;flex-direction:column;gap:10px;">
             <div class="event-date" style="font-size:14px;color:#0b63b7;font-weight:700;">01.02.2024</div>
             <div class="event-title" style="font-size:18px;font-weight:800;color:#0b2340;">Правила</div>
-            <div class="event-photo" style="margin-top:12px;border-radius:10px;overflow:hidden;height:180px;background:#f4f7fb;display:flex;align-items:center;justify-content:center"><img src="ruls.jpg" alt="" style="width:100%;height:100%;object-fit:cover"></div>
+            <div class="event-photo" style="margin-top:12px;border-radius:10px;overflow:hidden;height:180px;background:#f4f7fb;display:flex;align-items:center;justify-content:center"><img src="/ruls.jpg" alt="" style="width:100%;height:100%;object-fit:cover"></div>
             <a href="docs1.html" class="btn-primary" style="margin-top:8px;">Подробнее</a>
           </div>
         </div>
@@ -995,7 +995,7 @@
   <footer>
     <div class="footer-inner">
       <div style="display:flex;align-items:center;gap:12px">
-        <img src="footer-logo.png" alt="Логотип Федерации" style="width:220px;height:auto;object-fit:cover;border-radius:8px;box-shadow:0 8px 24px rgba(3,20,45,0.12);">
+  <img src="/footer-logo.png" alt="Логотип Федерации" style="width:220px;height:auto;object-fit:cover;border-radius:8px;box-shadow:0 8px 24px rgba(3,20,45,0.12);">
       </div>
 
       <div style="display:flex;align-items:center;gap:18px;flex-wrap:wrap;justify-content:center;">
@@ -1010,19 +1010,19 @@
 
         <div class="footer-socials">
   <a class="social-btn" href="https://instagram.com/yourprofile" target="_blank" rel="noopener">
-    <img src="instagramlogo.PNG" alt="Instagram">
+  <img src="/instagramlogo.PNG" alt="Instagram">
   </a>
   <a class="social-btn" href="https://t.me/yourchannel" target="_blank" rel="noopener">
-    <img src="telegramlogo.PNG" alt="Telegram">
+  <img src="/telegramlogo.PNG" alt="Telegram">
   </a>
   <a class="social-btn" href="https://facebook.com/yourpage" target="_blank" rel="noopener">
-    <img src="facebooklogo.PNG" alt="Facebook">
+  <img src="/facebooklogo.PNG" alt="Facebook">
   </a>
   <a class="social-btn" href="https://tiktok.com/@yourprofile" target="_blank" rel="noopener">
-    <img src="tiktoklogo.PNG" alt="TikTok">
+  <img src="/tiktoklogo.PNG" alt="TikTok">
   </a>
   <a class="social-btn" href="https://youtube.com/yourchannel" target="_blank" rel="noopener">
-    <img src="youtubelogo.PNG" alt="YouTube">
+  <img src="/youtubelogo.PNG" alt="YouTube">
   </a>
 </div>
 
