--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   .more-btn .hamburger::after{content:"";position:absolute;left:0;right:0;height:2px;background:#fff;border-radius:2px}
   .more-btn .hamburger::before{top:-6px}
   .more-btn .hamburger::after{top:6px}
-  /* icon image replacement: use the image file `tochka.PNG` (place it in project root) */
+  /* icon image replacement: use the image file `tochka.png` (place it in project root) */
   .more-btn .more-icon{width:22px;height:22px;object-fit:contain;display:block}
   /* shift hamburger / icon a few pixels to the right so it sits visually before socials */
   .more-btn .hamburger, .more-btn .more-icon{transform:translateX(4px)}
@@ -380,7 +380,7 @@
       </div>
           <div class="more-dropdown" id="moreDropdown" style="margin-right:10px;">
             <button class="more-btn" id="moreBtn" aria-label="Меню дополнительных ссылок" style="padding:8px 10px;">
-            <img src="/tochka.PNG" class="more-icon" alt="menu">
+            <img src="/tochka.png" class="more-icon" alt="menu">
             </button>
             <div class="more-menu" id="moreMenu" style="display:none">
               <a href="media.html">Медиа</a>
@@ -393,19 +393,19 @@
 
 <div class="socials">
   <a class="social-btn" href="https://instagram.com/yourprofile" target="_blank" rel="noopener">
-    <img src="/instagramlogo.PNG" alt="Instagram">
+    <img src="/instagramlogo.png" alt="Instagram">
   </a>
   <a class="social-btn" href="https://t.me/yourchannel" target="_blank" rel="noopener">
-    <img src="/telegramlogo.PNG" alt="Telegram">
+    <img src="/telegramlogo.png" alt="Telegram">
   </a>
   <a class="social-btn" href="https://facebook.com/yourpage" target="_blank" rel="noopener">
-    <img src="/facebooklogo.PNG" alt="Facebook">
+    <img src="/facebooklogo.png" alt="Facebook">
   </a>
   <a class="social-btn" href="https://tiktok.com/@yourprofile" target="_blank" rel="noopener">
-    <img src="/tiktoklogo.PNG" alt="TikTok">
+    <img src="/tiktoklogo.png" alt="TikTok">
   </a>
   <a class="social-btn" href="https://youtube.com/yourchannel" target="_blank" rel="noopener">
-    <img src="/youtubelogo.PNG" alt="YouTube">
+    <img src="/youtubelogo.png" alt="YouTube">
   </a>
 </div>
 
@@ -739,7 +739,7 @@
               <div class="event-date" style="font-size:14px;color:#0b63b7;font-weight:700;">08.10.2023</div>
               <div class="event-title" style="font-size:18px;font-weight:800;color:#0b2340;">Аккредитация IF3 в Казахстане</div>
             </div>
-            <div class="event-photo" style="margin-top:12px;border-radius:10px;overflow:hidden;height:180px;background:#f4f7fb;display:flex;align-items:center;justify-content:center"><img src="/acred.PNG" alt="" style="width:100%;height:100%;object-fit:cover"></div>
+            <div class="event-photo" style="margin-top:12px;border-radius:10px;overflow:hidden;height:180px;background:#f4f7fb;display:flex;align-items:center;justify-content:center"><img src="/acred.png" alt="" style="width:100%;height:100%;object-fit:cover"></div>
             <a href="docs2.html" class="btn-primary" style="margin-top:8px;">Подробнее</a>
           </div>
         </div>
@@ -1010,19 +1010,19 @@
 
         <div class="footer-socials">
   <a class="social-btn" href="https://instagram.com/yourprofile" target="_blank" rel="noopener">
-  <img src="/instagramlogo.PNG" alt="Instagram">
+  <img src="/instagramlogo.png" alt="Instagram">
   </a>
   <a class="social-btn" href="https://t.me/yourchannel" target="_blank" rel="noopener">
-  <img src="/telegramlogo.PNG" alt="Telegram">
+  <img src="/telegramlogo.png" alt="Telegram">
   </a>
   <a class="social-btn" href="https://facebook.com/yourpage" target="_blank" rel="noopener">
-  <img src="/facebooklogo.PNG" alt="Facebook">
+  <img src="/facebooklogo.png" alt="Facebook">
   </a>
   <a class="social-btn" href="https://tiktok.com/@yourprofile" target="_blank" rel="noopener">
-  <img src="/tiktoklogo.PNG" alt="TikTok">
+  <img src="/tiktoklogo.png" alt="TikTok">
   </a>
   <a class="social-btn" href="https://youtube.com/yourchannel" target="_blank" rel="noopener">
-  <img src="/youtubelogo.PNG" alt="YouTube">
+  <img src="/youtubelogo.png" alt="YouTube">
   </a>
 </div>
 
