--- a/news2.html
+++ b/news2.html
@@ -40,7 +40,7 @@
   .more-btn .hamburger::after{content:"";position:absolute;left:0;right:0;height:2px;background:#fff;border-radius:2px}
   .more-btn .hamburger::before{top:-6px}
   .more-btn .hamburger::after{top:6px}
-  /* icon image replacement: use the image file `tochka.PNG` (place it in project root) */
+  /* icon image replacement: use the image file `tochka.png` (place it in project root) */
   .more-btn .more-icon{width:22px;height:22px;object-fit:contain;display:block}
   .more-menu{position:absolute;right:0;top:calc(100% + 8px);background:#fff;color:var(--text);box-shadow:0 8px 24px rgba(3,20,45,0.12);border-radius:10px;overflow:hidden;min-width:220px;z-index:60;padding:6px 0}
   .more-menu a{display:block;padding:10px 14px;color:var(--text);font-weight:700;border-bottom:1px solid rgba(0,0,0,0.04);text-decoration:none}
@@ -192,7 +192,7 @@
   <header>
     <div class="nav-row">
       <div class="brand">
-  <img src="/footer-logo.png" alt="Логотип Федерации" style="width:220px;height:auto;border-radius:6px;box-shadow:0 6px 18px rgba(3,20,45,0.12);">
+      <img src="/footer-logo.png" alt="Логотип Федерации" style="width:220px;height:auto;border-radius:6px;box-shadow:0 6px 18px rgba(3,20,45,0.12);">
         <nav class="main-nav">
           <a href="index.html">Главная</a>
           <a href="about.html">О нас</a>
@@ -206,7 +206,7 @@
 
           <div class="more-dropdown" id="moreDropdown">
             <button class="more-btn" id="moreBtn" aria-label="Меню дополнительных ссылок" style="padding:8px 10px;">
-                <img src="/tochka.PNG" class="more-icon" alt="menu">
+                <img src="/tochka.png" class="more-icon" alt="menu">
             </button>
             <div class="more-menu" id="moreMenu" style="display:none">
               <a href="media.html">Медиа</a>
@@ -218,12 +218,12 @@
           </div>
       <div class="socials">
         <a class="social-btn" href="https://instagram.com/yourprofile" target="_blank" rel="noopener">
-  <img src="/instagramlogo.PNG" alt="Instagram">
+  <img src="/instagramlogo.png" alt="Instagram">
   </a>
-  <a class="social-btn" href="https://t.me/yourchannel" target="_blank"><img src="/telegramlogo.PNG" alt="Telegram"></a>
-  <a class="social-btn" href="https://facebook.com/yourpage" target="_blank"><img src="/facebooklogo.PNG" alt="Facebook"></a>
-  <a class="social-btn" href="https://tiktok.com/@yourprofile" target="_blank"><img src="/tiktoklogo.PNG" alt="TikTok"></a>
-  <a class="social-btn" href="https://youtube.com/yourchannel" target="_blank"><img src="/youtubelogo.PNG" alt="YouTube"></a>
+  <a class="social-btn" href="https://t.me/yourchannel" target="_blank"><img src="/telegramlogo.png" alt="Telegram"></a>
+  <a class="social-btn" href="https://facebook.com/yourpage" target="_blank"><img src="/facebooklogo.png" alt="Facebook"></a>
+  <a class="social-btn" href="https://tiktok.com/@yourprofile" target="_blank"><img src="/tiktoklogo.png" alt="TikTok"></a>
+  <a class="social-btn" href="https://youtube.com/yourchannel" target="_blank"><img src="/youtubelogo.png" alt="YouTube"></a>
       </div>
     </div>
   </header>
@@ -335,7 +335,7 @@
 
   <footer>
     <div class="footer-inner">
-      <div><img src="footer-logo.png" alt="Логотип Федерации" style="width:220px;border-radius:8px;"></div>
+      <div><img src="/footer-logo.png" alt="Логотип Федерации" style="width:220px;border-radius:8px;"></div>
       <nav style="display:flex;gap:10px;flex-wrap:wrap;">
         <a href="index.html" style="color:#fff;font-weight:600;">Главная</a>
         <a href="about.html" style="color:#fff;font-weight:600;">О нас</a>
@@ -346,12 +346,12 @@
       </nav>
       <div class="footer-socials">
         <a class="social-btn" href="https://instagram.com/yourprofile" target="_blank" rel="noopener">
-    <img src="instagramlogo.PNG" alt="Instagram">
+    <img src="/instagramlogo.png" alt="Instagram">
   </a>
-        <a class="social-btn" href="https://t.me/yourchannel" target="_blank"><img src="telegramlogo.PNG" alt="Telegram"></a>
-        <a class="social-btn" href="https://facebook.com/yourpage" target="_blank"><img src="facebooklogo.PNG" alt="Facebook"></a>
-        <a class="social-btn" href="https://tiktok.com/@yourprofile" target="_blank"><img src="tiktoklogo.PNG" alt="TikTok"></a>
-        <a class="social-btn" href="https://youtube.com/yourchannel" target="_blank"><img src="youtubelogo.PNG" alt="YouTube"></a>
+        <a class="social-btn" href="https://t.me/yourchannel" target="_blank"><img src="/telegramlogo.png" alt="Telegram"></a>
+        <a class="social-btn" href="https://facebook.com/yourpage" target="_blank"><img src="/facebooklogo.png" alt="Facebook"></a>
+        <a class="social-btn" href="https://tiktok.com/@yourprofile" target="_blank"><img src="/tiktoklogo.png" alt="TikTok"></a>
+        <a class="social-btn" href="https://youtube.com/yourchannel" target="_blank"><img src="/youtubelogo.png" alt="YouTube"></a>
       </div>
     </div>
 
