fix: renamed image extensions to lowercase

--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
         flex-direction:column;
         text-align:left;
       ">
-  <img src="/astanaopencup1.JPG" alt="Astana Open Cup 2025" style="
+  <img src="/astanaopencup1.jpg" alt="Astana Open Cup 2025" style="
           width:100%;
           height:210px;
           object-fit:cover;
@@ -611,7 +611,7 @@
         flex-direction:column;
         text-align:left;
       ">
-  <img src="/imageskz/kz.JPG" alt="Зимний Кубок 2025" style="
+  <img src="/imageskz/kz.jpg" alt="Зимний Кубок 2025" style="
           width:100%;
           height:210px;
           object-fit:cover;
