--- a/news4.html
+++ b/news4.html
@@ -315,12 +315,12 @@
       
       <div class="gallery-container">
         <div class="gallery-slide" id="gallerySlide">
-          <img src="/imageskz/kz1.JPG" alt="">
-          <img src="/imageskz/kz2.JPG" alt="">
-          <img src="/imageskz/kz3.JPG" alt="">
-          <img src="/imageskz/kz4.JPG" alt="">
-          <img src="/imageskz/kz5.JPG" alt="">
-          <img src="/imageskz/kz6.JPG" alt="">
+          <img src="/imageskz/kz1.jpg" alt="">
+          <img src="/imageskz/kz2.jpg" alt="">
+          <img src="/imageskz/kz3.jpg" alt="">
+          <img src="/imageskz/kz4.jpg" alt="">
+          <img src="/imageskz/kz5.jpg" alt="">
+          <img src="/imageskz/kz6.jpg" alt="">
         </div>
       </div>
 
